feat(api):add link_confidence
