# web/src/service/openapi.json
@@ -244,11 +244,15 @@
         "controller.UpdateGitLinkRequest": {
             "type": "object",
             "required": [
+                "linkConfidence",
                 "newGitLink",
                 "packageName",
                 "tableName"
             ],
             "properties": {
+                "linkConfidence": {
+                    "type": "string"
+                },
                 "newGitLink": {
                     "type": "string"
                 },
